--- a/indicium_data_science/notebook.ipynb
+++ b/indicium_data_science/notebook.ipynb
@@ -1799,7 +1799,7 @@
     "predicted = pd.concat([pd.Series(X_test.index.values), pd.Series(y_pred)], axis=1)\n",
     "predicted.columns = ['rowNumber', 'predictedValues']\n",
     "\n",
-    "predicted.to_csv('predicted.csv', index=False)"
+    "predicted.to_csv(f'{ROOT_DIR}/predicted.csv', index=False)"
    ]
   }
  ],
@@ -1819,7 +1819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
